fixed topic alignment in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ main {
   .topics-section {
     display: flex;
     flex-direction: column;
+    align-items: start;
   }
 
   .main-section-title {
